nef feacture added for momentum and frontend screen